/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto2";
package org.acme.travels.travels;

option kogito_model = "Travels";
option kogito_id = "travels";

/* @Indexed */
message Flight {
    option java_package = "org.acme.travels.travels";
    /* @Field(index = Index.NO, store = Store.YES) */
    optional string flightNumber = 1;
}
/* @Indexed */
message Hotel {
    option java_package = "org.acme.travels.travels";
    /* @Field(index = Index.NO, store = Store.YES) */
    optional string name = 1;

    optional string room = 2;
}

/* @Indexed */
message Travels {
    option java_package = "org.acme.travels.travels";
    /* @Field(index = Index.NO, store = Store.YES) */
    optional Flight flight = 1;
    /* @Field(index = Index.NO, store = Store.YES) */
    optional Hotel hotel = 2;
    /* @Field(store = Store.YES) */
    optional string id = 3;
    /* @Field(index = Index.NO, store = Store.YES) */
    optional string metadata = 4;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional int32 testInt = 5;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional double testDouble = 6;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional float testFloat = 7;
    /* @Field(index = Index.NO, store = Store.YES) @SortableField */
    optional int64 testLong = 8;
}
